crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__required_import_with_alias_docstring_with_semicolon.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
docstring_with_semicolon.py:1:1: I002 [*] Missing required import: `from __future__ import annotations as _annotations`
  |
1 | """Hello, world!"""; x = 1
  |  I002
  |
  = help: Insert required import: `from future import annotations as _annotations`

ℹ Fix
1   |-"""Hello, world!"""; x = 1
  1 |+"""Hello, world!"""; from __future__ import annotations as _annotations; x = 1


