crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__required_imports_docstring.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    name: MissingRequiredImport
    body: "Missing required import: `from __future__ import annotations`"
    suggestion: "Insert required import: `from __future__ import annotations`"
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 0
  fix:
    edits:
      - content: "from __future__ import annotations\n"
        location:
          row: 2
          column: 0
        end_location:
          row: 2
          column: 0
  parent: ~
- kind:
    name: MissingRequiredImport
    body: "Missing required import: `from __future__ import generator_stop`"
    suggestion: "Insert required import: `from __future__ import generator_stop`"
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 0
  fix:
    edits:
      - content: "from __future__ import generator_stop\n"
        location:
          row: 2
          column: 0
        end_location:
          row: 2
          column: 0
  parent: ~

