crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__trailing_suffix.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- - kind:
      name: UnsortedImports
      body: Import block is un-sorted or un-formatted
      suggestion: Organize imports
      fixable: true
    location:
      row: 1
      column: 0
    end_location:
      row: 2
      column: 9
    fix: ~
    parent: ~
  - kind:
      name: UnsortedImports
      body: Import block is un-sorted or un-formatted
      suggestion: Organize imports
      fixable: true
    location:
      row: 5
      column: 4
    end_location:
      row: 6
      column: 13
    fix: ~
    parent: ~

